Fixes in intro.

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,12 +1,13 @@
 %!TEX root = report.tex
-One of the major difficulties in modeling the transport of solutes as well as the flow of water is the dynamics of formation of cracks in clay soils. These networks of macro pores are governed by the dessication process. Modern simulations of the flow of water and the transport of dissolved matter are capable of modeling the flow of water within these pores. These networks are governed by the swell and shrink dynamics \cite{vogel2005studies2}.
+\rick{Nalezen}
+One of the major difficulties in modeling the transport of solutes as well as the flow of water is the dynamics of the formation of cracks in clay soils. These networks of macro pores are governed by the dessication process. Modern simulations of the flow of water and the transport of dissolved matter are capable of modeling the flow of water within these pores\cite{vogel2005studies2}.
 
 In general models of the dynamics of soil cracks focus on properties of the network of cracks in general, e.g., the volume as a function of water content and soil depth \cite{chertkov2000using}. However as these models completely disregard the geometry of the network of cracks they are not suitable for use in state-of-the-art models the flow of water and solutes. Other models, such as the one introduced by \textcite{horgan2000empirical}, take the geometry of the network into account but do not model the process of crack formation realistically. 
 
-\textcite{kitsunezaki1999fracture} model the formation of cracks in one dimension as a chain of particles, connected to their two neighbors by horizontal springs and grounded by vertical springs. By decreasing the natural length of the springs they simulate the shrinking of the material. Springs break if their energy exceeds some critical value. \cite{kitsunezaki1999fracture} determine the horizontal displacements of particles by minimizing some energy function. 
+\textcite{kitsunezaki1999fracture} models the formation of cracks in one dimension as a chain of particles, connected to their two neighbors by horizontal springs and grounded by vertical springs. By decreasing the natural length of the springs they simulate the shrinking of the material. Springs break if their energy exceeds some critical value. \citeauthor{kitsunezaki1999fracture} determines the horizontal displacements of particles by minimizing some energy function. 
 
-A model with some of the same ideas has been introduced by \textcite{vogel2005studies2}. Contrary to \citeauthor{kitsunezaki1999fracture}, \citeauthor{vogel2005studies2} use a two-dimensional lattice with ungrounded, i.e. there are no vertical springs connecting the lattice to some basis, Hookean springs whose natural length decreases. The condition under which springs break is similar to the one used by \citeauthor{kitsunezaki1999fracture}. The change resulting from a broken spring is propagated radially throughout the lattice until a maximum number of steps has been reached, or the system has stabilized completely. The resulting models realistically represents the process of crack formation. Furthermore the model's properties can be directly linked to the physical properties and boundary conditions of the material.
+A model with some of the same ideas has been introduced by \textcite{vogel2005studies2}. Contrary to \citeauthor{kitsunezaki1999fracture}, \citeauthor{vogel2005studies2} use a two-dimensional lattice with ungrounded Hookean springs whose natural length decreases, , i.e. there are no vertical springs connecting the lattice to some basis,  The condition under which springs break is similar to the one used by \citeauthor{kitsunezaki1999fracture}. The change resulting from a broken spring is propagated radially throughout the lattice until a maximum number of steps has been taken, or the system has stabilized completely. The resulting model realistically represents the process of crack formation. Furthermore the model's properties can be directly linked to the physical properties and boundary conditions of the material.
 
-We propose a simplified model that although not as representative of prominent features physical can be solved faster and should give a reasonable indication of the crack dynamics. Our model represents the particles and the springs between them as a linear model. This allows use to use a linear solver to determine the new positions of the particles after springs have been broken. In this newly stabilized system we once again break springs. The stabilize, break springs is repeated until no more springs can be broken, be it because there are no more springs left, or because there are no more springs that satisfy the requirement for being broken. The repeated stabilization and breaking of springs models the dessication of the material.
+We propose a simplified model based on that introduced by \citeauthor{vogel2005studies2}, that although not as representative of prominent features physical can be solved faster and should give a reasonable indication of crack dynamics. Our model represents the particles and the springs between them as a linear model. This allows us to use a linear solver to determine the new positions of the particles after springs have been broken. In this newly stabilized system we once again break springs. The steps of stabilizing the network and breaking springs are repeated until no more springs can be broken, be it because there are no more springs left, or because there are no more springs that satisfy the requirement for being broken. The repeated stabilization and breaking of springs models the dessication of the material.
 
 \Cref{s:method} presents the theory of our method. The implementation the simulation based on the discussed method is introduced in \cref{s:implementation}. \Cref{s:ExperimentsDiscussion} presents the experiments we performed with our implementation and presents and reviews the gathered results. Finally, \cref{s:conclusion} discusses our conclusion.
