Voor de zoveelste keer de tikz plaatjes gefixt.

--- a/report/ics.sty
+++ b/report/ics.sty
@@ -32,8 +32,8 @@
     edgeStyle/.style = {line width = 1.3pt},
     fixed/.style =     {anchor=base,fill,circle,inner sep=1.5pt},
     free/.style =      {circle,draw, inner sep = 1pt},
+    foo/.style =    {inner sep = 0.1pt, anchor=center, midway, above=1ex},    
     spring/.style =    {fill=white,circle,inner sep = 0.1pt, anchor=center, midway},
-    label/.style =    {inner sep = 0.1pt, anchor=center, midway, above=1ex},    
     node distance=2.3cm
 }
 
