--- a/report/report.tex
+++ b/report/report.tex
@@ -96,7 +96,7 @@
 % Other commands
 \renewcommand{\t}[1]{\texttt{#1}}
 
-\title{A String Simulation of Crack Dynamics}
+\title{A Spring Simulation of Crack Dynamics}
 \author{%
 	Rick van Veen (s1883933)%
 	\thanks{These authors contributed equally to this work.}% 
