--- a/report/method.tex
+++ b/report/method.tex
@@ -67,13 +67,11 @@ The system is stabilized by calculating, using the formula from \eqref{eq:single
 	L\vec{x} = \vec{r},
 \end{equation}
 %
-\begin{equation}\label{eq:a:}
-	L = A^T K A .* C
+where $\vec{x}$ are the unknown new particle positions. How the matrix $L$ and vector $\vec{r}$ are constructed is described in \cref{s:implementation}. When the new locations are found the system is stable and springs can be broken. There are multiple ways to determine which springs to break, e.g., the ten springs with the highest stress. The stress on a spring is given by:
+\begin{equation}\label{eq:spring:stress}
+	
 \end{equation}
-%
-If this formula we find the new positions $\vec{x}$ of the particles by solving the 
 
-\todo[inline]{Reference that the step after this is the solve/stabilization part of this section.}
 
 \subsection{The Vogel model}\label{ss:method:vogel}
 
