--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -52,3 +52,19 @@
   year={1999},
   publisher={APS}
 }
+
+@software{qt,
+  author = {{The Qt Company}},
+  title = {Qt},
+  url = {https://qt.io},
+  version = {5.5.1},
+  date = {2016-01-01},
+}
+
+@software{openGL,
+  author = {{Khronos Group}},
+  title = {OpenGL},
+  url = {https://www.opengl.org},
+  version = {4.1},
+  date = {2016-01-01},
+}
