@software is not supported.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -53,7 +53,7 @@
   publisher={APS}
 }
 
-@software{qt,
+@misc{qt,
   author = {{The Qt Company}},
   title = {Qt},
   url = {https://qt.io},
@@ -61,7 +61,7 @@
   date = {2016-01-01},
 }
 
-@software{openGL,
+@misc{openGL,
   author = {{Khronos Group}},
   title = {OpenGL},
   url = {https://www.opengl.org},
