Eerste versie van de implementatie.

--- a/report/biblio.bib
+++ b/report/biblio.bib
@@ -68,3 +68,10 @@
   version = {4.1},
   date = {2016-01-01},
 }
+
+@techreport{sanderson2010armadillo,
+  title={Armadillo: An open source C++ linear algebra library for fast prototyping and computationally intensive experiments},
+  author={Sanderson, Conrad},
+  year={2010},
+  publisher={NICTA}
+}
